# autotech-sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt
autotech_sdk/: __init__.py
autotech_sdk/database/mongo/: __init__.py  base_model.py  base_model_meta.py  mongo_client.py  mongo_config.py  setup_collection.py
autotech_sdk/kafka/: __init__.py
autotech_sdk/kafka/consumer/: confluent_consumer.py
autotech_sdk/kafka/publisher/: confluent_publisher.py
src/autotech_sdk/: __init__.py
src/autotech_sdk/database/mongo/: __init__.py  base_model.py  base_model_meta.py  mongo_client.py  setup_collection.py
src/autotech_sdk/kafka/: __init__.py
src/autotech_sdk/kafka/common/: kafka_config.py
src/autotech_sdk/kafka/consumer/: confluent_consumer.py
src/autotech_sdk/kafka/publisher/: confluent_publisher.py
tests/kafka/consumer/: test_confluent_consumer.py
